hphp/hack/test/typecheck/coeffects/parameter_default.php.exp
File "parameter_default.php", line 5, characters 26-33:
Expected constant expression for initializer (Parsing[1002])
File "parameter_default.php", line 5, characters 26-31:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "parameter_default.php", line 5, characters 19-22:
  From this declaration, the context of this function body provides the capability set {}
  File "parameter_default.php", line 3, characters 19-21:
  But the function being called requires the capability int
